# coder-assist-personal

./: .gitignore  README.en.md  README.md  main.py  pyproject.toml
cli/: commands.py  ui.py
config/: settings.yaml
core/: agent.py  backup.py  context_builder.py  context_explorer.py  diff_engine.py  errors.py  fs_scan.py  logging_setup.py  patch_engine.py  router.py  settings.py
git_tools/: git_history.py  git_manager.py
memory/: chunker.py  embeddings.py  memory_manager.py  retriever.py  sqlite_store.py  vector_store.py
models/: schemas.py
prompts/: ask.md  commit.md  edit.md  evaluate.md  explore.md  plan.md  recall.md
providers/: base_provider.py  claude_cli_provider.py  factory.py  ollama_provider.py
security/: path_guard.py  redactor.py
tests/: test_agent_explore.py  test_chunker.py  test_claude_provider.py  test_context_builder.py  test_context_explorer.py  test_diff_engine.py  test_fs_scan.py  test_fts.py  test_memory_manager.py  test_modes.py  test_multi_file.py  test_ollama_provider.py  test_patch_engine.py  test_path_guard.py  test_redactor.py  test_retriever.py  test_router.py  test_schemas.py  test_sqlite_store.py  test_stats.py  test_vector_store.py
