[project]
name = "personal-aider"
version = "0.1.0"
description = "CLI de edição de código assistida por IA — local-first, com aprovação obrigatória e auditoria completa"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "chromadb>=0.5",
    "pathspec>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
aider = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli", "core", "providers", "memory", "git_tools", "models", "security"]

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "main.py"
"prompts" = "prompts"
"config" = "config"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
